2010-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/unimplemented.m: Don't mention onCleanup (supported).

2010-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* statistics/base/median.m: Ensure NaNs where needed. Simplify first
	non-singleton dimension computation.

2010-05-24  Rik <octave@nomad.inbox5.com>
        * general/private/__isequal__.m, image/image.m, 
        statistics/base/ranks.m: Replace calls to deprecated functions.

2010-05-23  Rik <octave@nomad.inbox5.com>

        * image/imshow.m: Scale image point color according to colormap. 
        Bug #29926.

2010-05-16  Rik <octave@nomad.inbox5.com>

        * plot/semilogx.m, plot/semilogy.m: Plot minor ticks for semilog plots.

2010-05-16  Rik <octave@nomad.inbox5.com>

        * audio/loadaudio.m, audio/playaudio.m, audio/saveaudio.m,
        audio/wavread.m, general/bicubic.m, general/bitcmp.m, general/bitget.m,
        general/bitset.m, general/cplxpair.m, general/del2.m,
        general/gradient.m, general/interp2.m, general/interp3.m,
        general/interpn.m, general/postpad.m, general/prepad.m,
        general/private/__splinen__.m, image/image_viewer.m, image/imagesc.m,
        image/saveimage.m, linear-algebra/expm.m, linear-algebra/krylov.m,
        miscellaneous/edit.m, miscellaneous/private/__xzip__.m,
        miscellaneous/what.m, optimization/glpk.m, optimization/optimset.m,
        optimization/pqpnonneg.m, path/pathdef.m, plot/__go_draw_axes__.m,
        plot/__marching_cube__.m, plot/gnuplot_drawnow.m, plot/ishold.m,
        plot/isocolors.m, plot/isonormals.m, plot/print.m,
        plot/private/__add_datasource__.m, plot/private/__color_str_rgb__.m,
        plot/private/__errplot__.m, plot/private/__interp_cube__.m,
        plot/shading.m, plot/specular.m, polynomial/deconv.m,
        polynomial/polyint.m, polynomial/ppint.m, set/powerset.m,
        signal/arch_fit.m, signal/arch_test.m, signal/durbinlevinson.m,